--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header img{
 .content {
     padding-bottom: 120px;
 }
+
 .title-1 {
     text-transform: uppercase;
     font-size: 30px;
@@ -40,6 +41,11 @@ header img{
     font-size: 16px;
     color: #fff;
 }
+.btn-outline-dark,.btn-info {
+    padding: 7px 40px !important;
+    font-size: 19px !important;
+    border-radius: 10px !important;
+}
 .slider {
     margin: 4em 0;
     position: relative;
@@ -53,13 +59,13 @@ header img{
     text-align: right;
     font-weight: bold;
     position: absolute;
-    bottom: -45px;
+    bottom: -40px;
 }
 .end {
-    right: 0px;
+    right: 0;
 }
 .start {
-    left: 0px;
+    left: 0;
 }
 
 .set {
@@ -69,9 +75,9 @@ header img{
     text-align: center;
     white-space: nowrap;
     transform: translateX(-50%);
-    border: 1px solid #b7b7b7;
-    border-radius: 5px;
-    padding: 5px 10px;
+    border: 1px solid #363636;
+    border-radius: 10px;
+    padding: 5px 15px;
 }
 .range {
     position: relative;
@@ -105,6 +111,7 @@ input,select {
     height: 45px !important;
     font-size: 18px;
     border-radius: 10px !important;
+    border-color: rgb(206, 212, 218) !important;
 }
 select {
     background: #fff !important;
@@ -113,6 +120,7 @@ select {
 label {
     line-height: 45px;
     margin-bottom: 0 !important;
+    font-size: 18px !important;
 }
 .transition, input[type=radio]:after, input[type=checkbox][type=radio]:after, input[type=checkbox]:after {
     -moz-transition: all 0.25s cubic-bezier(0.75, 0.01, 0.48, 2);
@@ -130,10 +138,10 @@ label {
 
 input[type=checkbox] {
     position: relative;
-    border-radius: 30px;
+    border-radius: 24px;
     cursor: pointer;
-    width: 30px;
-    height: 30px !important;
+    width: 24px;
+    height: 24px !important;
 }
 input[type=checkbox]:before, input[type=checkbox]:after {
     content: "";
@@ -186,8 +194,9 @@ input[type=checkbox][type=checkbox]:checked:before {
     background-color: #ff660c;
     box-shadow: 0 0 0 1px #ff660c;
 }
-
-
+.form-group {
+    margin-bottom: 25px !important;
+}
 .check label {
     line-height: 1.5 !important;
 }
@@ -196,6 +205,9 @@ input[type=checkbox][type=checkbox]:checked:before {
 }
 .btn-info {
     background: #009b95;
+}
+.footer {
+    margin-top: 45px;
 }
 @media (min-width: 1356px) {
     .container {
@@ -218,6 +230,14 @@ input[type=checkbox][type=checkbox]:checked:before {
     .banner-mobi {
         display: none;
     }
+    .w-80 {
+        width: 82% !important;
+    }
+    .w-20 {
+        width: 20% !important;
+    }
+
+
 }
 @media (max-width: 767.98px) {
     label {
@@ -229,11 +249,16 @@ input[type=checkbox][type=checkbox]:checked:before {
     header {
         padding-top: 15px;
     }
+    .select-gt {
+        flex-direction: column;
+        margin-top: -45px;
+    }
+
     .slider {
         padding: 0 20px;
     }
     .space-mb {
-        margin-top: 90px;
+        margin-top: 80px;
     }
     .footer button {
          width: 100%;
