--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ header img{
     border: 1px solid #363636;
     border-radius: 10px;
     padding: 5px 15px;
+    font-size: 12px;
 }
 .range {
     position: relative;
